--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline">
+    <h1 class="text-3xl font-bold text-secondary-200 text-blue-200
+     sm:text-center md:text-right lg:text-left">
         Hello world!
     </h1>
+    <p class="text-center invisible sm:visible">I am small device</p>
+    <p class="text-center invisible md:visible">I am Midium device [mobile]</p>
+    <p class="text-center invisible lg:visible">I am large device [tablet]</p>
+    <p class="text-center invisible xl:visible">I am xl device[laptop]</p>
+    <p class="text-center  invisible 2xl:visible">I am 2xl device[large laptop]</p>
 </body>
 
 </html>
