--- a/src/col-span.html
+++ b/src/col-span.html
@@ -12,7 +12,7 @@
     <main>
         <h1 class="text-3xl font-bold font-mono text-center py-4">This is col-span example.</h1>
         <div class="max-w-[1080px] mx-auto grid grid-cols-4 gap-3 text-center font-bold">
-            <div class="box py-20 px-14 hover:shadow-xl bg-slate-400 rounded-lg col-span-2">col-span2</div>
+            <div class="box py-20 px-14 hover:shadow-xl bg-slate-400 rounded-full col-span-2">col-span2</div>
             <div class="box py-20 px-14 hover:shadow-xl bg-slate-300 rounded-lg">.</div>
             <div class="box py-20 px-14 hover:shadow-xl bg-slate-200 rounded-lg">.</div>
 
